--- a/app/assets/javascripts/templates/index.html
+++ b/app/assets/javascripts/templates/index.html
@@ -9,6 +9,8 @@
     </div>
     <div class="form-group col-md-6 col-md-offset-3 text-center">
       <button x-ng-click="search(keywords)" class="btn btn-primary btn-lg">Search</button>
+      <button x-ng-click="newRecipe()" class="btn btn-info btn-lg">New Recipe…</button>
+    
     </div>
   </form>
 </section>
@@ -19,8 +21,7 @@
       <section class="well col-md-6 col-md-offset-3">
         <h1 class="h3 col-md-6 text-right" style="margin-top: 0"><a href ng-click="view(recipe.id)">{{recipe.name}}</a></h1>
         <div class="col-md-6">
-          <button class="btn btn-info">Edit</button>
-          <button class="btn btn-danger">Delete</button>
+          <button x-ng-click="edit(recipe.id)" class="btn btn-info">Edit</button>
         </div>
       </section>
     </li>
